# weave

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md
.claude/agents/: code-quality-reviewer.md  godot-developer.md
.claude/docs/: code-smells-and-anti-patterns.md
.github/workflows/: build-and-test.yml  build-macos.yml  ci.yml  release-godot-addon.yml  smoke-test.yml
bindings/godot/: Cargo.toml  build-web.bat
bindings/godot/.cargo/: config.toml
bindings/godot/addon/bobbin/: bobbin.gd  bobbin.gdextension  bobbin_importer.gd  bobbin_importer.gd.uid  bobbin_script.gd  bobbin_script.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
bindings/godot/addons/bobbin/: LICENSE.md  README.md  bobbin.gd  bobbin.gd.uid  bobbin.gdextension  bobbin.gdextension.uid  bobbin_icon_16.png.import
bindings/godot/src/: lib.rs
docker/: build.sh
docs/adr/: 0002-variable-state-management.md  0004-variable-storage-architecture.md
docs/language/: design-notes.md  grammar.md
godot/: .gitignore
godot/docs/: autoloads_versus_internal_nodes.md  data_preferences.md  godot_interfaces.md  godot_notifications.md  introduction_best_practices.md  logic_preferences.md  node_alternatives.md  project_organization.md  scene_organization.md  scenes_versus_scripts.md  what_are_godot_classes.md
godot/weave-test-project/: icon.svg.import  project.godot
runtime/src/: ast.rs  chunk.rs  compiler.rs  lib.rs  parser.rs  resolver.rs  scanner.rs  storage.rs  token.rs  vm.rs
runtime/tests/: basic.rs  choices.rs  e2e.rs  syntax.rs  (+1 more)
scripts/: setup.ps1  setup.sh
(+98 files in other folders)
