[package]
name = "bobbin-godot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bobbin-runtime = { path = "../../runtime" }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["api-custom", "experimental-wasm", "lazy-function-tables"]
